--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -4,12 +4,12 @@
 
 
   "home": {
-    "yourCity": "الميزانية",
-    "yourBudget": "الإحصاء ",
+    "yourCity": "..البيانات",
+    "yourBudget": "..الميزانية",
     "mainDescription": "افهم كيف تتدفق الأموال داخل وخارج القصر الكبير سنة بعد سنة...",
-    "subtitle": "من الإضاءة العامة إلى الفعاليات المجتمعية، اغوص في البيانات المفصلة والمرئية. 100% صديقة للمواطن ومحمولة أولاً.",
+    "subtitle": "تطبيق ويب تفاعلي، يهدف إلى مساعدة المستخدمين على استكشاف البيانات العمومية المتعلقة بمدينة القصر الكبير بطريقة مرئية وسهلة.",
     "ctaButton": "ألق نظرة بالداخل",
-    "welcomeMessage": "مرحبًا بك في Ksar-Data",
+    "welcomeMessage": "مرحبًا بكم في Ksar-Data",
     "heroDescription": "منصتك لفهم البيانات العامة لمدينتك بطريقة شفافة ومبسطة.",
     "exploreButton": "ابدأ الاستكشاف",
     
@@ -129,7 +129,7 @@
       "results": "نتائج",
       "total": "إجمالي",
       "data_source": "مصدر البيانات",
-      "municipal_records": "سجلات بلدية القصر الكبير",
+      "municipal_records": "موقع بلدية القصر الكبير",
       "years_range": "السنوات",
       "total_grants": "إجمالي المنح",
       "from": "من",
@@ -139,7 +139,8 @@
       "years_covered": "السنوات المغطاة",
       "total_distributed": "إجمالي الموزع",
       "to": "إلى",
-      "associations": "جمعيات"
+      "associations": "جمعيات",
+      "showAll": "اضغط على اسم الجمعية لرؤية الاسم الكامل"
     }
 
 
