--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -70,7 +70,7 @@
       "search_support_data": "Search Sports Association Support Grants",
       "year": "Year",
       "association_name": "Association Name",
-      "grant_amount": "Grant Amount (DH)",
+      "grant_amount": "Amount (DH)",
       "no_grants_found": "No matching grants found",
       "adjust_filters": "Try adjusting your search filters",
       "football": "Football",
