--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -2,10 +2,10 @@
   "title": "Explorateur de budget de Ksar El Kebir 🧾",
   "loadedRows": "Chargé {{count}} lignes",
   "home": {
-    "yourCity": "VOTRE VILLE..",
-    "yourBudget": "VOTRE BUDGET",
+    "yourCity": "DATA",
+    "yourBudget": "BUDGET",
     "mainDescription": "COMPRENEZ COMMENT L'ARGENT CIRCULE DANS ET HORS DE KSAR EL KEBIR ANNÉE APRÈS ANNÉE...",
-    "subtitle": "DE L'ÉCLAIRAGE PUBLIC AUX ÉVÉNEMENTS COMMUNAUTAIRES, PLONGEZ DANS DES DONNÉES DÉTAILLÉES ET VISUALISÉES. 100% CONVIVIAL POUR LES CITOYENS ET MOBILE-FIRST.",
+    "subtitle": "Une application web interactive visant à aider les utilisateurs à explorer les données publiques relatives à la ville de Ksar El Kebir de manière visuelle et facile à comprendre.",
     "ctaButton": "JETEZ UN COUP D'ŒEIL À L'INTÉRIEUR",
     "rgphTitle": "DONNÉES DU RECENSEMENT (RGPH)",
     "rgphDescription": "Explorez les données démographiques et de logement complètes du Recensement Général de la Population et de l'Habitat du Maroc. Accédez aux statistiques détaillées sur l'éducation, l'emploi, les langues et les conditions de vie à Ksar El Kebir.",
@@ -95,7 +95,7 @@
     "search_support_data": "Rechercher dans les subventions d'aide aux associations sportives", 
     "year": "Année", 
     "association_name": "Nom de l'association", 
-    "grant_amount": "Montant de la subvention (dirham)", 
+    "grant_amount": "Montant", 
     "no_grants_found": "Aucune subvention correspondante trouvée", 
     "adjust_filters": "Essayez d'ajuster les filtres de recherche", 
     "football": "Football", 
