Update the UI for Insights page

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -140,7 +140,7 @@
       "total_distributed": "إجمالي الموزع",
       "to": "إلى",
       "associations": "جمعيات",
-      "showAll": "اضغط على اسم الجمعية لرؤية الاسم الكامل"
+      "showAll": "اضغط على الاسم لرؤية الاسم الكامل"
     }
 
 
