--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -101,6 +101,7 @@
       "years_covered": "Années Couvertes",
       "total_distributed": "Total Distribué",
       "to": "à",
-      "associations": "associations"
+      "associations": "associations",
+      "showAll": "Click on the title to see the full title"
     }
 }
