--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -126,6 +126,7 @@
     "years_covered": "Années couvertes", 
     "total_distributed": "Total distribué", 
     "to": "à", 
-    "associations": "associations" 
+    "associations": "associations",
+    "showAll": "Cliquez sur le titre pour voir le titre complet"
   }
 }
