add attendence page and fix Some UI issues

--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -24,7 +24,8 @@
     "about": "À propos",
     "contact": "Contact",
     "medicine": "Prix des médicaments",
-    "support": "subventions/aide"
+    "support": "subventions/aide",
+    "attendance": "Présence aux séances"
   },
   "rgphpage": {
     "Search_RGPH_Data": "Recherche dans les données RGPH",
