--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -52,7 +52,9 @@
     "contact": "اتصل بنا",
     "RGPH": "الإحصاء العام",
     "medicine": "اثمنة الأدوية",
-    "support": "دعم الجمعيات "
+    "support": "دعم الجمعيات ",
+    "attendance": "حضور/غياب الجلسات",
+    "services": "المجلس الجماعي"
   },
   "searchpage": {
     "title": "استكشاف ميزانية القصر الكبير",
