--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -54,7 +54,8 @@
     "medicine": "اثمنة الأدوية",
     "support": "دعم الجمعيات ",
     "attendance": "حضور/غياب الجلسات",
-    "services": "المجلس الجماعي"
+    "services": "المجلس الجماعي",
+    "decisions": "قرارات المجلس"
   },
   "searchpage": {
     "title": "استكشاف ميزانية القصر الكبير",
