dark/lisgh and translations

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -103,5 +103,149 @@
       "to": "à",
       "associations": "associations",
       "showAll": "Click on the title to see the full title"
-    }
+      
+    },
+    "decisionspage": {
+    "search_decisions_data": "Council Decisions Data",
+    "decisions_tab": "Decisions",
+    "search_input_placeholder": "Search by decision title, decision number, or date",
+    "filter_by_year": "Filter by year",
+    "all_years": "All years",
+    "rows_per_page": "Rows per page",
+    "filtering": "Filtering...",
+    "showing": "Showing",
+    "of": "of",
+    "results": "result(s)",
+    "from_total": "out of",
+    "total": "total",
+    "expand": "Expand",
+    "decision_number": "Decision Number",
+    "decision_title": "Decision Title",
+    "date": "Date",
+    "decision_type": "Decision Type",
+    "voting_stats": "Voting Statistics",
+    "total_votes": "Total Votes",
+    "no_decisions_found": "No matching decisions found",
+    "adjust_filters": "Try adjusting your filters",
+    "unanimous": "Unanimous",
+    "majority": "Majority",
+    "contested": "Contested",
+    "mixed": "Mixed",
+    "accepted": "Accepted",
+    "refused": "Refused",
+    "abstained": "Abstained",
+    "present_members": "Present Members",
+    "participants": "Voting Participants",
+    "abstained_members": "Abstained Members",
+    "refused_members": "Refused Members",
+    "accepted_members": "Accepted Members",
+    "decision_details": "Decision Details",
+    "decision_date": "Decision Date",
+    "expressed_votes": "Expressed Votes",
+    "click_for_details": "Click on the decision to view details"
+  },
+  "membersvotingpage": {
+    "members_tab": "Members",
+    "search_input_placeholder": "Search by member name",
+    "filter_by_participation": "Filter by participation",
+    "all_participation_levels": "All levels",
+    "high_participation": "High participation (90%+)",
+    "medium_participation": "Medium participation (50-89%)",
+    "low_participation": "Low participation (<50%)",
+    "rows_per_page": "Rows per page",
+    "filtering": "Filtering...",
+    "showing": "Showing",
+    "of": "of",
+    "results": "result(s)",
+    "from_total": "out of",
+    "total": "member(s)",
+    "no_members_found": "No matching members found",
+    "adjust_filters": "Try adjusting your filters",
+    "rank": "Rank",
+    "member_name": "Member Name",
+    "acceptance_percentage": "Approval Rate",
+    "total_participation": "Participation",
+    "accepted_votes": "Accepted",
+    "refused_votes": "Refused",
+    "abstained_votes": "Abstained",
+    "total_decisions": "Total",
+    "participation_percentage": "Participation Rate"
+  },
+  "attendancepage": {
+    "search_attendance_data": "Session Attendance Data",
+    "sessions_tab": "Sessions",
+    "search_input_placeholder": "Search by session type, date, or session number",
+    "filter_by_session_type": "Filter by session type",
+    "all_session_types": "All Types",
+    "normal_session": "Normal Session",
+    "exceptional_session": "Exceptional Session",
+    "filter_by_year": "Filter by year",
+    "all_years": "All Years",
+    "filter_by_month": "Filter by month",
+    "all_months": "All Months",
+    "rows_per_page": "Rows per page",
+    "filtering": "Filtering...",
+    "showing": "Showing",
+    "of": "of",
+    "results": "results",
+    "from_total": "from a total of",
+    "total": "total",
+    "click_to_view_details": "Click on the session to view details",
+    "no_sessions_found": "No matching sessions found",
+    "adjust_filters": "Try adjusting your filters",
+    "expand": "Expand",
+    "session_type": "Session Type",
+    "session_number": "Session Number",
+    "date": "Date",
+    "time": "Time",
+    "attendance_stats": "Attendance Stats",
+    "total_members": "Total Members",
+    "session_details": "Session Details",
+    "session": "Session",
+    "present": "Present",
+    "absent_with_reason": "Absent with Reason",
+    "absent_without_reason": "Absent without Reason",
+    "vacant_positions": "Vacant Positions",
+    "present_members": "Present Members",
+    "absent_with_reason_members": "Absent with Reason",
+    "absent_without_reason_members": "Absent without Reason",
+    "file_source": "Source File",
+    "session_date": "Session Date",
+    "session_time": "Session Time",
+    "click_for_details": "Click on the Session to view details"
+  },
+  "personsattendancepage": {
+    "persons_tab": "Members",
+    "search_input_placeholder": "Search by member name or role",
+    "filter_by_role": "Filter by role",
+    "all_roles": "All Roles",
+    "filter_by_attendance": "Filter by attendance percentage",
+    "all_attendance_levels": "All Levels",
+    "excellent_attendance": "Excellent (90%+)",
+    "good_attendance": "Good (75-89%)",
+    "average_attendance": "Average (50-74%)",
+    "poor_attendance": "Poor (Below 50%)",
+    "rows_per_page": "Rows per page",
+    "filtering": "Filtering...",
+    "showing": "Showing",
+    "of": "of",
+    "results": "results",
+    "from_total": "from a total of",
+    "total": "member",
+    "no_members_found": "No matching members found",
+    "adjust_filters": "Try adjusting your filters",
+    "rank": "Rank",
+    "member_name": "Member Name",
+    "role": "Role",
+    "total_presence": "Presence",
+    "absent_with_reason": "With Reason",
+    "absent_without_reason": "Without Reason",
+    "total_sessions": "Total",
+    "attendance_percentage": "Percentage",
+    "role_change_indicator": "(Role Change)",
+    "total_members": "Total Members",
+    "excellent_performers": "Excellent (90%+)",
+    "good_performers": "Good (75-89%)",
+    "needs_improvement": "Needs Improvement (<50%)"
+  }
 }
