--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -12,7 +12,8 @@
     "rgphFeature1": "Démographie de la population par âge et sexe",
     "rgphFeature2": "Statistiques d'éducation et d'emploi",
     "rgphFeature3": "Conditions de logement et infrastructure",
-    "rgphCTA": "EXPLORER LES DONNÉES DU RECENSEMENT"
+    "rgphCTA": "EXPLORER LES DONNÉES DU RECENSEMENT",
+    "welcomeMessage": "Bienvenue à KSAR-DATA"
   },
 
   "navbar": {
@@ -130,5 +131,148 @@
     "to": "à", 
     "associations": "associations",
     "showAll": "Cliquez sur le titre pour voir le titre complet"
+  },
+  "decisionspage": {
+    "search_decisions_data": "Données des Décisions du Conseil",
+    "decisions_tab": "Décisions",
+    "search_input_placeholder": "Rechercher par titre de décision, numéro de décision, ou date",
+    "filter_by_year": "Filtrer par année",
+    "all_years": "Toutes les années",
+    "rows_per_page": "Lignes par page",
+    "filtering": "Filtrage en cours...",
+    "showing": "Affichage",
+    "of": "de",
+    "results": "résultat(s)",
+    "from_total": "sur un total de",
+    "total": "total",
+    "expand": "Étendre",
+    "decision_number": "Numéro de décision",
+    "decision_title": "Titre de la décision",
+    "date": "Date",
+    "decision_type": "Type de décision",
+    "voting_stats": "Statistiques de vote",
+    "total_votes": "Total des votes",
+    "no_decisions_found": "Aucune décision correspondante trouvée",
+    "adjust_filters": "Essayez d'ajuster vos filtres",
+    "unanimous": "Unanime",
+    "majority": "Majorité",
+    "contested": "Contestée",
+    "mixed": "Mixte",
+    "accepted": "Acceptée",
+    "refused": "Refusée",
+    "abstained": "Abstention",
+    "present_members": "Membres présents",
+    "participants": "Participants au vote",
+    "abstained_members": "Membres abstentionnistes",
+    "refused_members": "Membres opposants",
+    "accepted_members": "Membres favorables",
+    "decision_details": "Détails de la décision",
+    "decision_date": "Date de la décision",
+    "expressed_votes": "Votes exprimés",
+    "click_for_details": "Cliquez sur la décision pour voir les détails"
+  },
+  "membersvotingpage": {
+    "members_tab": "Membres",
+    "search_input_placeholder": "Rechercher par nom du membre",
+    "filter_by_participation": "Filtrer par participation",
+    "all_participation_levels": "Tous les niveaux",
+    "high_participation": "Participation élevée (90%+)",
+    "medium_participation": "Participation moyenne (50-89%)",
+    "low_participation": "Participation faible (<50%)",
+    "rows_per_page": "Lignes par page",
+    "filtering": "Filtrage en cours...",
+    "showing": "Affichage",
+    "of": "de",
+    "results": "résultat(s)",
+    "from_total": "sur un total de",
+    "total": "membre(s)",
+    "no_members_found": "Aucun membre correspondant trouvé",
+    "adjust_filters": "Essayez d'ajuster vos filtres",
+    "rank": "Rang",
+    "member_name": "Nom du membre",
+    "acceptance_percentage": "Taux d'approbation",
+    "total_participation": "Participation",
+    "accepted_votes": "Accepté",
+    "refused_votes": "Refusé",
+    "abstained_votes": "Abstention",
+    "total_decisions": "Total",
+    "participation_percentage": "Taux de participation"
+  },
+  "attendancepage": {
+    "search_attendance_data": "Données de présence aux sessions",
+    "sessions_tab": "Sessions",
+    "search_input_placeholder": "Rechercher par type de session, date ou numéro de session",
+    "filter_by_session_type": "Filtrer par type de session",
+    "all_session_types": "Tous les types",
+    "normal_session": "Session ordinaire",
+    "exceptional_session": "Session extraordinaire",
+    "filter_by_year": "Filtrer par année",
+    "all_years": "Toutes les années",
+    "filter_by_month": "Filtrer par mois",
+    "all_months": "Tous les mois",
+    "rows_per_page": "Lignes par page",
+    "filtering": "Filtrage en cours...",
+    "showing": "Affichage de",
+    "of": "sur",
+    "results": "résultats",
+    "from_total": "d'un total de",
+    "total": "total",
+    "click_to_view_details": "Cliquez sur la session pour voir les détails",
+    "no_sessions_found": "Aucune session correspondante trouvée",
+    "adjust_filters": "Essayez d'ajuster vos filtres",
+    "expand": "Développer",
+    "session_type": "Type de session",
+    "session_number": "Numéro de session",
+    "date": "Date",
+    "time": "Heure",
+    "attendance_stats": "Statistiques de présence",
+    "total_members": "Total des membres",
+    "session_details": "Détails de la session",
+    "session": "Session",
+    "present": "Présent",
+    "absent_with_reason": "Absent avec justification",
+    "absent_without_reason": "Absent sans justification",
+    "vacant_positions": "Postes vacants",
+    "present_members": "Membres présents",
+    "absent_with_reason_members": "Absents avec justification",
+    "absent_without_reason_members": "Absents sans justification",
+    "file_source": "Fichier source",
+    "session_date": "Date de la session",
+    "session_time": "Heure de la session",
+    "click_for_details": "Cliquez sur la session pour voir les détails"
+  },
+  "personsattendancepage": {
+    "persons_tab": "Membres",
+    "search_input_placeholder": "Rechercher par nom de membre ou poste",
+    "filter_by_role": "Filtrer par poste",
+    "all_roles": "Tous les postes",
+    "filter_by_attendance": "Filtrer par pourcentage de présence",
+    "all_attendance_levels": "Tous les niveaux",
+    "excellent_attendance": "Excellent (90%+)",
+    "good_attendance": "Bon (75-89%)",
+    "average_attendance": "Moyen (50-74%)",
+    "poor_attendance": "Faible (Moins de 50%)",
+    "rows_per_page": "Lignes par page",
+    "filtering": "Filtrage en cours...",
+    "showing": "Affichage de",
+    "of": "sur",
+    "results": "résultats",
+    "from_total": "d'un total de",
+    "total": "membre",
+    "no_members_found": "Aucun membre correspondant trouvé",
+    "adjust_filters": "Essayez d'ajuster vos filtres",
+    "rank": "Rang",
+    "member_name": "Nom du membre",
+    "role": "Poste",
+    "total_presence": "Présence",
+    "absent_with_reason": "Avec justif.",
+    "absent_without_reason": "Sans justif.",
+    "total_sessions": "Total",
+    "attendance_percentage": "Pourcentage",
+    "role_change_indicator": "(Changement de poste)",
+    "total_members": "Total des membres",
+    "excellent_performers": "Excellent (90%+)",
+    "good_performers": "Bon (75-89%)",
+    "needs_improvement": "Amélioration nécessaire (<50%)"
   }
 }
