--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -2,7 +2,16 @@
   "title": "مستكشف ميزانية القصر الكبير 🧾",
   "loadedRows": "تم تحميل {{count}} صفوف",
 
-
+   "table": {
+    "year": "السنة",
+    "label": "التسمية",
+    "approved": "مصادق عليه",
+    "section": "القسم",
+    "type": "النوع",
+    "code": "الرمز",
+    "noData": "لم يتم العثور على بيانات مطابقة",
+    "adjustFilters": "جرب تعديل مرشحات البحث"
+  },
   "home": {
     "yourCity": "..البيانات",
     "yourBudget": "..الميزانية",
@@ -144,7 +153,15 @@
       "to": "إلى",
       "associations": "جمعيات",
       "showAll": "اضغط على الاسم لرؤية الاسم الكامل"
-    }
+    },
+    "sections": {
+    "fonctionnement": "التسيير",
+    "equipement": "التجهيز"
+  },
+  "types": {
+    "credits": "اعتمادات",
+    "recettes": "مداخيل"
+  }
 
 
 
