add download page and update about page

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -64,7 +64,8 @@
     "support": "دعم الجمعيات ",
     "attendance": "حضور/غياب الجلسات",
     "services": "المجلس الجماعي",
-    "decisions": "قرارات المجلس"
+    "decisions": "قرارات المجلس",
+    "download": "تحميل"
   },
   "searchpage": {
     "title": "استكشاف ميزانية القصر الكبير",
