--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -27,7 +27,8 @@
     "medicine": "Prix des médicaments",
     "support": "subventions/aide",
     "attendance": "Présence aux séances",
-    "decisions": "Décisions du conseil"
+    "decisions": "Décisions du conseil",
+    "download": "Télécharger"
   },
   "rgphpage": {
     "Search_RGPH_Data": "Recherche dans les données RGPH",
