--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -265,5 +265,12 @@
   "types": {
     "credits": "Credits",
     "recettes": "Revenues"
+  },
+  "searchpage": {
+    "filtering": "Filtering...",
+    "showing": "Showing",
+    "of": "of",
+    "results": "results",
+    "total": "total"
   }
 }
