Add new Page of CSK Scores

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -65,7 +65,8 @@
     "attendance": "حضور/غياب الجلسات",
     "services": "المجلس الجماعي",
     "decisions": "قرارات المجلس",
-    "download": "تحميل"
+    "download": "تحميل",
+    "scores": "رياضة"
   },
   "searchpage": {
     "title": "استكشاف ميزانية القصر الكبير",
@@ -177,6 +178,40 @@
     "education": "التعليم",
     "languesMaternelles": "اللغات الأم",
     "conditionsHabitat": "ظروف السكن"
+  },
+  "scores": {
+    "page_title": " نتائج مباريات النادي القصري للمواسم من 2020/2021 إلى 2022/2023",
+    "page_subtitle": "تاريخ المباريات والإحصائيات الكاملة للنادي القصري",
+    "match_history": "تاريخ المباريات",
+    "filter_description": "استخدم المرشحات أدناه لتحليل نتائج المباريات حسب الموسم أو النتيجة أو المكان.",
+    "total_matches": "إجمالي المباريات",
+    "wins": "الانتصارات",
+    "losses": "الهزائم", 
+    "draws": "التعادل",
+    "win_rate": "معدل الفوز",
+    "total_matches_text": "مباراة إجمالية",
+    "filter_result": "تصفية حسب النتيجة",
+    "filter_season": "تصفية حسب الموسم",
+    "filter_location": "تصفية حسب المكان",
+    "all_results": "جميع النتائج",
+    "all_seasons": "جميع المواسم",
+    "all_locations": "جميع الأماكن",
+    "home": "الملعب",
+    "away": "خارج الملعب",
+    "date": "التاريخ",
+    "season": "الموسم",
+    "opponent": "الخصم",
+    "score": "النتيجة",
+    "result": "النتيجة",
+    "win": "فوز",
+    "loss": "هزيمة",
+    "draw": "تعادل",
+    "no_matches": "لم يتم العثور على مباريات",
+    "adjust_filters": "جرب تعديل المرشحات الخاصة بك",
+    "no_data": "لا توجد بيانات مباريات متاحة",
+    "no_data_description": "ستظهر نتائج المباريات هنا عند تحميل البيانات.",
+    "home_team": "المستضيف",
+    "away_team": "الضيف"
   }
 
 
