--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -272,5 +272,37 @@
     "of": "of",
     "results": "results",
     "total": "total"
+  },
+  "scores": {
+    "page_title": "CSK Match Results",
+    "page_subtitle": "Complete match history and statistics for Chabab Souss Ksar",
+    "match_history": "Match History",
+    "filter_description": "Use the filters below to analyze match results by season, result, or location.",
+    "total_matches": "Total Matches",
+    "wins": "Wins",
+    "losses": "Losses",
+    "draws": "Draws", 
+    "win_rate": "Win Rate",
+    "total_matches_text": "total matches",
+    "filter_result": "Filter by Result",
+    "filter_season": "Filter by Season",
+    "filter_location": "Filter by Location",
+    "all_results": "All Results",
+    "all_seasons": "All Seasons",
+    "all_locations": "All Locations",
+    "home": "Home",
+    "away": "Away",
+    "date": "Date",
+    "season": "Season",
+    "opponent": "Opponent",
+    "score": "Score",
+    "result": "Result",
+    "win": "Win",
+    "loss": "Loss",
+    "draw": "Draw",
+    "no_matches": "No matches found",
+    "adjust_filters": "Try adjusting your filters",
+    "no_data": "No match data available",
+    "no_data_description": "Match results will appear here when data is loaded."
   }
 }
