--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -311,5 +311,37 @@
     "of": "de",
     "results": "résultats",
     "total": "total"
+  },
+  "scores": {
+    "page_title": "Résultats des Matchs CSK",
+    "page_subtitle": "Historique complet des matchs et statistiques pour Chabab Souss Ksar",
+    "match_history": "Historique des Matchs",
+    "filter_description": "Utilisez les filtres ci-dessous pour analyser les résultats des matchs par saison, résultat ou lieu.",
+    "total_matches": "Total des Matchs",
+    "wins": "Victoires",
+    "losses": "Défaites",
+    "draws": "Matchs Nuls",
+    "win_rate": "Taux de Victoire",
+    "total_matches_text": "matchs au total",
+    "filter_result": "Filtrer par Résultat",
+    "filter_season": "Filtrer par Saison",
+    "filter_location": "Filtrer par Lieu",
+    "all_results": "Tous les Résultats",
+    "all_seasons": "Toutes les Saisons",
+    "all_locations": "Tous les Lieux",
+    "home": "Domicile",
+    "away": "Extérieur",
+    "date": "Date",
+    "season": "Saison",
+    "opponent": "Adversaire",
+    "score": "Score",
+    "result": "Résultat",
+    "win": "Victoire",
+    "loss": "Défaite",
+    "draw": "Match Nul",
+    "no_matches": "Aucun match trouvé",
+    "adjust_filters": "Essayez d'ajuster vos filtres",
+    "no_data": "Aucune donnée de match disponible",
+    "no_data_description": "Les résultats des matchs apparaîtront ici une fois les données chargées."
   }
 }
