redesign Home, About, Download pages and add facts page

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -59,14 +59,19 @@
     "credits": "المصاريف",
     "insights": "المبيانات",
     "contact": "اتصل بنا",
-    "RGPH": "الإحصاء العام",
+    "RGPH": "2014-2024 الإحصاء العام",
     "medicine": "اثمنة الأدوية",
     "support": "دعم الجمعيات ",
     "attendance": "حضور/غياب الجلسات",
     "services": "المجلس الجماعي",
     "decisions": "قرارات المجلس",
     "download": "تحميل",
-    "scores": "رياضة"
+    "scores": "النادي الرياضي القصري",
+    "facts": "هل تعلم؟",
+    "data":"بيانات عامة",
+    "information":"البيانات في أسئلة",
+    "aboutUs" : "عن الموقع"
+
   },
   "searchpage": {
     "title": "استكشاف ميزانية القصر الكبير",
