--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -18,7 +18,7 @@
     "mainDescription": "افهم كيف تتدفق الأموال داخل وخارج القصر الكبير سنة بعد سنة...",
     "subtitle": "تطبيق ويب تفاعلي، يهدف إلى مساعدة المستخدمين على استكشاف البيانات العمومية المتعلقة بمدينة القصر الكبير بطريقة مرئية وسهلة.",
     "ctaButton": "ألق نظرة بالداخل",
-    "welcomeMessage": "مرحبًا بكم في Ksar-Data",
+    "welcomeMessage": "مرحبًا بكم في KSAR DATA",
     "heroDescription": "منصتك لفهم البيانات العامة لمدينتك بطريقة شفافة ومبسطة.",
     "exploreButton": "ابدأ الاستكشاف",
     
@@ -39,7 +39,7 @@
     "aboutTitle": "حول المشروع",
     "aboutDescription": "اكتشف لماذا أُنشئ هذا المشروع وكيف نسعى لتبسيط البيانات المالية.",
     "aboutFeature1": "أهدافنا ورسالتنا",
-    "aboutFeature2": "قصة مشروع Ksar-Data",
+    "aboutFeature2": "قصة مشروع KSAR DATA",
     "aboutFeature3": "كيف يمكنك المساهمة أو الدعم",
     "aboutCTA": "تعرف أكثر",
     "rgphTitle": "بيانات الإحصاء العام (RGPH)",
