--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -13,7 +13,7 @@
     "rgphFeature2": "Statistiques d'éducation et d'emploi",
     "rgphFeature3": "Conditions de logement et infrastructure",
     "rgphCTA": "EXPLORER LES DONNÉES DU RECENSEMENT",
-    "welcomeMessage": "Bienvenue à KSAR-DATA"
+    "welcomeMessage": "Bienvenue à KSAR DATA"
   },
 
   "navbar": {
