--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -56,7 +56,7 @@
     "theme": "المظهر",
     "search": "الميزانية",
     "recettes": "المداخيل",
-    "credits": "المصاريف",
+    "credits": "الإعتمادات",
     "insights": "المبيانات",
     "contact": "اتصل بنا",
     "RGPH": "2014-2024 الإحصاء العام",
@@ -82,7 +82,7 @@
     "alltype": "كل الأنواع",
     "searchPlaceholder": "ابحث في الميزانية...",
     "yearFilter": "تصفية حسب السنة",
-    "credits": "تصفية حسب المصاريف",
+    "credits": "تصفية حسب الإعتمادات",
     "recettes": "تصفية حسب المداخيل",
     "Search_Budget_Data": "بحث في بيانات الميزانية",
     "loading": "جارٍ التحميل...",
